welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:5: error: type mismatch;
 found   : Unit
 required: Boolean
	 { if (nums(i)=value) return vu
                      ^indexOfValue:3: error: type mismatch;
 found   : Unit
 required: Int
	for (i <-0 to nums.length-1) {
               ^